; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_filter/extr_oldmovie.c_CHECK_N_DARKEN_PIXEL.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_filter/extr_oldmovie.c_CHECK_N_DARKEN_PIXEL.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32*)* @CHECK_N_DARKEN_PIXEL to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CHECK_N_DARKEN_PIXEL(i32 %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load i32*, i32** %8, align 8
  %12 = call i32 @CHECK_PIX_OFS(i32 %9, i32 %10, i32* %11)
  %13 = call i64 @likely(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %4
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* %7, align 4
  %19 = load i32*, i32** %8, align 8
  %20 = call i32 @DARKEN_PIXEL(i32 %16, i32 %17, i32 %18, i32* %19)
  br label %21

21:                                               ; preds = %15, %4
  ret void
}

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @CHECK_PIX_OFS(i32, i32, i32*) #1

declare dso_local i32 @DARKEN_PIXEL(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
